--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "log": "yarn standard-version"
+  },
   "devDependencies": {
     "standard-version": "^9.3.2"
   }
