--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "private": true,
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
     "commitlint": "^17.1.2",
     "commitlint-config-gitmoji": "^2.2.5",
     "husky": "^8.0.1",
     "standard-version": "^9.3.2"
+  },
+  "dependencies": {
+    "@commitlint/config-conventional": "^17.1.0"
   }
 }
