--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-angular": "^17.1.0",
     "commitlint": "^17.1.2",
     "commitlint-config-gitmoji": "^2.2.5",
     "husky": "^8.0.1",
